# google-surface-code-reproduction

./: CITATION.cff  README.md  pyproject.toml
notebooks/: 01_reproduce_google_scaling.ipynb
reports/: TECHNICAL_REPORT.md
src/grepro/: __init__.py  experiments.py  figures.py  noise.py  repro.py
tests/: test_experiments.py
